[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/char/freddy/38b.png" type="Texture" id=1]
[ext_resource path="res://sprites/char/freddy/2db.png" type="Texture" id=2]
[ext_resource path="res://sprites/char/freddy/38c.png" type="Texture" id=3]
[ext_resource path="res://objects/chars/freddy/freddyai.gd" type="Script" id=4]
[ext_resource path="res://sprites/cams/lhall.png" type="Texture" id=5]
[ext_resource path="res://audio/char/freddy/laugh.mp3" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 223, 146 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 106, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -136, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "freddy"
length = 5.0
step = 1.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 106, -0.25, 0, 0.25, 0, 157, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0, 42, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -136, -0.25, 0, 0.25, 0, -133, -0.25, 0, 0.25, 0, -64, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3 )
}

[node name="freddy" type="Node2D"]
z_index = 7
script = ExtResource( 4 )

[node name="area" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="area"]
position = Vector2( -19, -12 )
shape = SubResource( 4 )

[node name="freddyTimer" type="Timer" parent="."]
autostart = true

[node name="background" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="fredSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 106, -136 )
z_index = 7
frames = SubResource( 1 )

[node name="fredAnimation" type="AnimationPlayer" parent="fredSprite"]
playback_speed = 0.0
anims/RESET = SubResource( 2 )
anims/freddy = SubResource( 3 )

[node name="laugh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="killTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
[connection signal="timeout" from="freddyTimer" to="." method="_on_freddyTimer_timeout"]
[connection signal="frame_changed" from="fredSprite" to="." method="_on_fredSprite_frame_changed"]
[connection signal="timeout" from="killTimer" to="." method="_on_killTimer_timeout"]
